--- a/Lab2/Page1.html
+++ b/Lab2/Page1.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Note-Vote</title>
+        <title>Page1</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 <body>
