--- a/Lab3/Page2.html
+++ b/Lab3/Page2.html
@@ -11,7 +11,7 @@
     <h1>Note-Vote</h1>
     <div class="accordion container2" id="accordionContainer2">
         <!-- Logged In Section -->
-        <div class="accordion-item">
+        <div class="accordion2-item">
             <h2 class="accordion-header" id="headingLogin">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLogin"
                     aria-expanded="true" aria-controls="collapseLogin">
